arc: Unify help overlay view in OOBE with in-session UI.

This adds close button and limit focus traversal inside overlay for OOBE
Optin. Adds tooltip for close button for both UI. Adds screen 'loading'
for webview based help for both UI

Test: Manually
Bug: 837597
Bug: 836197
Bug: 836195
Bug: 831527
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I63bae1200e3573a06f63bdd7e12f34a46a9e5d84
Reviewed-on: https://chromium-review.googlesource.com/1065139
Commit-Queue: Yury Khmel <khmel@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559942}
Former-commit-id: 91c230c66f349536e58e315ac9604311cee7dcd9